--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/icons-extra.css"/>
     <link rel="stylesheet" type="text/css" href="assets/fonts/mui-icons-extra.ttf"/>
 	<script src="assets/js/mui.min.js"></script>
+	<!--<script src="assets/js/mui.view.js"></script>-->
+<!--	<script src="assets/js/feedback.js"></script>-->
 </head>
 <body>
     <div id="app"></div>
